entrega final completa

--- a/biografia.html
+++ b/biografia.html
@@ -58,7 +58,7 @@
       A los nueve años mientras miraba El Club del Clan por televisión compuso su primer tema llamado "Corazón de hormigón"</p>
   </div>
   <div class="infancia__foto">
-    <img src="multimedia/charlyniño.jpg" alt="Charly García de niño">
+    <img src="multimedia/charlyninio.jpg" alt="Charly García de niño">
   </div>
   <div class="bioSuiGeneris">
     <h2 class="bio__titulo">Sui Generis (1969-1975)</h2>
@@ -185,7 +185,8 @@
     <img src="multimedia/serugiran.jpg" alt="Foto de la banda Serú Giran">
   </div>
   <div class="bioSolista">
-    <h2>Carrera como solista</h2>
+    <h2 class="bio__titulo">Carrera como solista</h2>
+    <h3 class="bio__subtitulo">Trilogía Consagratoria</h3>
     <p>En 1982, la Argentina estaba en proceso de cambio político. Después de la Guerra de las Malvinas en junio, estalló el caos social y el gobierno militar perdió parte de su poder. Ese año García debutó como solista, hizo la banda sonora de Pubis
       angelical, película de Raúl de la Torre, adaptada de la novela de Manuel Puig, también guionista. El material salió ese año editado en un álbum doble junto a Yendo de la cama al living. Ayudado por la difusión que se le daba en ese momento al
       rock nacional a través de los medios de comunicación (durante la Guerra de Malvinas estaba prohibido pasar música en inglés), el disco tuvo una gran recepción en el público. En él venían canciones antológicas, como por ejemplo «No bombardeen
@@ -206,7 +207,46 @@
       arreglado por García para la obra de teatro homónima de Antonio Gasalla.</p>
   </div>
   <div class="bioSolista__foto">
-    <img src="multimedia/charlybigote.jpg" alt="">
+    <img src="multimedia/charlybigote.jpg" alt="Charly García y su bigote bi-color">
+  </div>
+  <div class="bioSolista">
+    <h3 class="bio__subtitulo">Tango y Parte de la religión</h3>
+    <p>Luego de 1984 no grabó ningún disco (fue editada una recopilación, Grandes éxitos). Quedó incompleto un proyecto con Luis Alberto Spinetta (Spinetta/García), del cual sobrevivieron algunos recitales y el tema «Rezo por vos» (incluido en dicho disco). Ese mismo año fue protagonista del Festival Rock and Pop, organizado por el empresario Daniel Grinbank, donde compartió el escenario con Nina Hagen, INXS y Los Abuelos de la Nada, entre otros, que se llevó a cabo a principios de noviembre en el estadio de Vélez.</p>
+    <br>
+    <p>Tras el éxito de Piano bar, que era la consagración de García como solista, 1985 fue un año para reducir la velocidad. Charly volvió a reunirse con Pedro Aznar en Nueva York y junto a él grabó Tango (1986). Su difusión fue muy escasa, pese a que dio la impresión de que el proyecto daba para más. El proyecto Tango terminó cuando se sucedieron incidentes en una presentación en San Miguel de Tucumán, que provocaron la cancelación de dos shows que Tango tenía programados en Obras en mayo de 1986.19​ Paralelamente, renovó su banda, entonces integrada por Richard Coleman (guitarra), Christian Basso (bajo), Fernando Samalea (batería), la vuelta de Andrés Calamaro y Melingo. Con ellos giro por Chile, Brasil y España. Esta agrupación se denominaba Las Ligas. En ese período, comenzaría a producir a varias bandas y artistas, como Andrés Calamaro, Suéter y Los Abuelos de la Nada.</p>
+    <br>
+    <p>En 1987 llegó Parte de la religión, considerado por muchos como el mejor disco de García solista. Este material, junto a Piano bar, terminarían por confirmarlo como uno de los mejores compositores de rock argentino y un artista reconocido a nivel internacional. El álbum fue grabado e interpretado casi en su totalidad por él, y alterna un rock fuerte con estribillos melódicos. Es, seguramente, uno de sus discos más prolijos y compactos, desde la tapa hasta el contenido de las letras. Ya para las presentaciones en vivo, en julio, la banda que lo acompañaba era nueva: Carlos García López en guitarra, Fernando Lupano en bajo, Fernando Samalea en batería, Fabián Quintiero y Alfi Martins en teclados y nuevamente Fabiana Cantilo en los coros.</p>
+    <br>
+    <p>A García le ofrecieron un papel de reparto (en la cual interpretó a un enfermero) en una película del que también compondría la banda sonora. Lo que vendrá, intento de novela futurista de Gustavo Mosquera, contó con la participación de Hugo Soto y Juan Leyrado. Curiosamente, García ganaría un premio en Nueva York como mejor actor de reparto. En toda la película Charly García conducía un vehículo, algo que jamás pudo hacer en la vida real. Tras componer la banda de sonido de la película, trabajó en su siguiente álbum solista, Cómo conseguir chicas (1989), esencialmente un trabajo de recopilación de canciones sueltas, que García, por diversos motivos, nunca había grabado. Contó con invitados como el brasilero Herbert Vianna (de Os Paralamas do Sucesso) y el violinista indio L. Shankar. El LP incluye una canción titulada «Shisyastawuman» (una transliteración directa deliberadamente de she is just a woman: ‘ella es solo una mujer’), la primera canción grabada por García en inglés que fue escrita para una mujer. La mujer lo abandonó después de escuchar la canción, al igual que Lebón le había advertido años atrás. Una canción llamada «Zocacola» que Charly había dedicado a Zoca también se incluyó en este LP. Un par de meses después de que el disco fue lanzado, Zoca lo dejó.</p>
+    <p>
+    García había cambiado. Físicamente, parecía más viejo. Su música era oscura, y el García de antes había desaparecido. Ahora su sonido estaba más cerca del punk rock, con temas violentos, como «No toquen», o un estilo depresivo y oscuro, como se muestra en «No me verás en el subte». Diferentes tiempos y adversos que se avecinaba.</p>
+  </div>
+  <div class="bioSolista__foto">
+    <img src="multimedia/charlyguitarra.jpg" alt="Charly García foto 1986">
+  </div>
+  <div class="bioSolista">
+    <h3 class="bio__subtitulo">La era Say no More</h3>
+    <p>En 1996 editó Say no More, álbum que reúne temas del autor con obras instrumentales que habían sido escritas para la película Geisha, pero no fueron incluidas en la banda sonora por diferencias con el director. Este trabajo marcó un concepto nuevo para García, con el que atraería a un nuevo tipo de público pero terminaría de alejar a varios de sus seguidores más veteranos. Con los años se volvió un disco de culto, e incluso García lo considera su álbum preferido de los que ha grabado.</p>
+    <br>
+    <p>En 1997 graba junto a Mercedes Sosa un disco de canciones propias interpretadas por la Negra, titulado Alta fidelidad. Ambos se conocían desde su infancia, por lo que decidieron publicar un trabajo colaborativo en el que Mercedes iba a cantar sus canciones favoritas de García.</p>
+    <br>
+    <p>En 1998 presentó el disco El aguante en Buenos Aires. El álbum cuenta con «Kill my mother», canción dedicada a la madre de Charly, Carmen Moreno. Esta producción contó con muchas versiones traducidas al español por García, como «Tin soldier» (de Small Faces), o «Roll Over Beethoven» (de Chuck Berry). Una canción significativa que no se incluyó fue «A whiter shade of pale», originalmente publicada por Procol Harum, banda que Charly siempre había admirado.</p>
+  </div>
+  <div class="bioSolista__foto">
+    <img src="multimedia/spinettaycharly.jpg" alt="Charly García con Spinetta">
+  </div>
+  <div class="bioSolista">
+    <h2 class="bio__titulo">Actualidad (2015-actualidad)</h2>
+    <p>Recién en 2015, a cinco años de Kill Gil, Charly García empezó a trabajar en su disco número 17,​ aparte de jugar con la idea de una película sobre su vida para 2016 o 2017.​</p>
+    <br>
+    <p>Tras los tres discos publicados por EMI entre 2002 y 2010, el 24 de febrero de 2017 se publicó bajo el sello Sony Music el disco Random, conformado de diez canciones.​ El primer sencillo de Random, lanzado el 5 de febrero, fue La máquina de ser feliz, canción que Charly había estado interpretando en vivo desde 2015.</p>
+    <br>
+    <p>Con el paso del tiempo, el disco consiguió Disco de Oro en Argentina por diez mil copias vendidas. En abril se lanzó un nuevo sencillo, Lluvia, aunque de momento sin ningún videoclip, al igual que La máquina de ser feliz. En junio, el sello Sony subió a YouTube tres videos en los que aparece Charly en medio de una sesión de fotos, tarareando las nuevas canciones Ella es tan Kubrick, Primavera y Otro. Estos videos antecedieron el primer videoclip oficial de Charly desde Deberías saber por qué, de 2009: Lluvia.</p>
+
+    <p>En 2019, se unió al proyecto individual de Roberto Pettinato "Pettinato Plays García", el cual en un inicio era un disco que el músico de jazz haría en homenaje a Charly, versionando en instrumental algunos de sus temas no tan conocidos. García decidió un día ir a supervisarlo y terminaron haciendo el disco juntos, contando con la participación instrumental y vocal de Charly en algunos de los temas. Finalmente, tras un año de grabación, el álbum estuvo disponible en Youtube el 4 de junio de 2020.</p>
+    <div class="bioSolista__foto">
+      <img src="multimedia/charlygranrex.jpg" alt="Charly García en el Gran Rex(2018)">
+    </div>
   </div>
   <footer class="pie">
     <a href="#top">Volver arriba.</a>
